tests/success/simple_let.tig
let
    var output := "output\n"
in
    print(output)
end
