tests/fail/unexpected_eof.tig
let
    var n := 0
in
    print("\n");